fix: allow block to take 100%, avoid overflow

--- a/app/common/CodeBlock/CodeBlock.module.scss
+++ b/app/common/CodeBlock/CodeBlock.module.scss
@@ -7,9 +7,11 @@
   border: 1px solid map.get($colorBox, "border");
   border-radius: 8px;
   overflow: scroll;
+  display: flex;
 
   .table {
     border-collapse: collapse;
+    flex: 1;
 
     tbody {
       tr:first-child td {
@@ -65,7 +67,7 @@
 
     .block {
       position: absolute;
-      width: 100%;
+      width: calc(100% - 3px);
       z-index: 3;
       left: 3px;
       top: -1px;
